@@ -3,9 +3,8 @@ package com.shaft.listeners.internal;
 import com.shaft.driver.SHAFT;
 import com.shaft.driver.internal.DriverFactory.DriverFactoryHelper;
 import com.shaft.enums.internal.Screenshots;
-import com.shaft.gui.internal.image.ScreenshotManager;
+import com.shaft.gui.internal.image.AnimatedGifManager;
 import com.shaft.gui.internal.video.RecordManager;
-import com.shaft.tools.io.ReportManager;
 import com.shaft.tools.io.internal.ReportManagerHelper;
 import io.qameta.allure.Issue;
 import io.qameta.allure.Issues;
@@ -19,66 +18,75 @@ import org.testng.xml.XmlClass;
 import org.testng.xml.XmlSuite;
 import org.testng.xml.XmlTest;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
 
 public class TestNGListenerHelper {
 
     private static final ArrayList<ITestResult> beforeMethods = new ArrayList<>();
     private static final ArrayList<ITestResult> afterMethods = new ArrayList<>();
     private static final ThreadLocal<String> testName = new ThreadLocal<>();
+
     public static void setTotalNumberOfTests(ISuite testSuite) {
         // This condition checks to confirm that this is not a cucumber test runner instance
         // If this condition is removed the total number of tests will be zero because the cucumber
         // test runner doesn't have any test methods
-        if (!(testSuite.getAllMethods().size() == 1 && testSuite.getAllMethods().get(0).getMethodName().equals("runScenario"))) {
+        if (!(testSuite.getAllMethods().size() == 1 && testSuite.getAllMethods().getFirst().getMethodName().equals("runScenario"))) {
             ReportManagerHelper.setTotalNumberOfTests(testSuite.getAllMethods().size());
         }
     }
-    public static void attachConfigurationMethods(){
+
+    public static void attachConfigurationMethods() {
         attachBeforeConfigurationMethods();
         attachAfterConfigurationMethods();
     }
 
-    public static void updateConfigurationMethods(ITestResult iTestResult){
+    public static void updateConfigurationMethods(ITestResult iTestResult) {
         updateBeforeConfigurationMethods(iTestResult);
         updateAfterConfigurationMethods(iTestResult);
     }
 
-    private static void attachBeforeConfigurationMethods(){
-        if(beforeMethods.size() != 0) {
+    private static void attachBeforeConfigurationMethods() {
+        if (!beforeMethods.isEmpty()) {
             if (beforeMethods.size() > 1) {
-                TestNGListenerHelper.attachTestArtifacts(beforeMethods.get(beforeMethods.size() - 1));
+                TestNGListenerHelper.attachTestArtifacts(beforeMethods.getLast());
             } else {
-                TestNGListenerHelper.attachTestArtifacts(beforeMethods.get(0));
+                TestNGListenerHelper.attachTestArtifacts(beforeMethods.getFirst());
             }
             beforeMethods.clear();
         }
     }
 
     private static void updateBeforeConfigurationMethods(ITestResult iTestResult) {
-        if (iTestResult.getMethod().isBeforeMethodConfiguration() || iTestResult.getMethod().isBeforeTestConfiguration()
-                || iTestResult.getMethod().isBeforeClassConfiguration() || iTestResult.getMethod().isBeforeSuiteConfiguration()) {
-            // get test result and store it for later processing
-            beforeMethods.add(iTestResult);
+        if (iTestResult != null) {
+            if (iTestResult.getMethod().isBeforeMethodConfiguration() || iTestResult.getMethod().isBeforeTestConfiguration()
+                    || iTestResult.getMethod().isBeforeClassConfiguration() || iTestResult.getMethod().isBeforeSuiteConfiguration()) {
+                // get test result and store it for later processing
+                beforeMethods.add(iTestResult);
+            }
         }
     }
 
-    private static void attachAfterConfigurationMethods(){
-        if(afterMethods.size() != 0) {
+    private static void attachAfterConfigurationMethods() {
+        if (!afterMethods.isEmpty()) {
             if (afterMethods.size() > 1) {
-                TestNGListenerHelper.attachTestArtifacts(afterMethods.get(afterMethods.size() - 1));
+                TestNGListenerHelper.attachTestArtifacts(afterMethods.getLast());
             } else {
-                TestNGListenerHelper.attachTestArtifacts(afterMethods.get(0));
+                TestNGListenerHelper.attachTestArtifacts(afterMethods.getFirst());
             }
             afterMethods.clear();
         }
     }
 
     private static void updateAfterConfigurationMethods(ITestResult iTestResult) {
-        if (iTestResult.getMethod().isAfterMethodConfiguration() || iTestResult.getMethod().isAfterTestConfiguration()
-        || iTestResult.getMethod().isAfterClassConfiguration() || iTestResult.getMethod().isAfterSuiteConfiguration()) {
-            // get test result and store it for later processing
-            afterMethods.add(iTestResult);
+        if (iTestResult != null) {
+            if (iTestResult.getMethod().isAfterMethodConfiguration() || iTestResult.getMethod().isAfterTestConfiguration()
+                    || iTestResult.getMethod().isAfterClassConfiguration() || iTestResult.getMethod().isAfterSuiteConfiguration()) {
+                // get test result and store it for later processing
+                afterMethods.add(iTestResult);
+            }
         }
     }
 
@@ -89,41 +97,6 @@ public class TestNGListenerHelper {
         }
     }
 
-//    public static void updateConfigurationMethodLogs(ITestResult iTestResult) {
-//        if (iTestResult.getMethod().isTest()) {
-//
-//            //attach current test logs to the current test
-//            TestNGListenerHelper.attachTestArtifacts(iTestResult);
-//
-//            //point Allure UUID to the current test method
-////            TestNGListenerHelper.writeAllureUUID();
-//        } else {
-//            if (iTestResult.getMethod().isBeforeMethodConfiguration()) {
-//                // get test result and store it for later processing
-//
-//                beforeMethods.add(iTestResult);
-//                beforeMethods.forEach(TestNGListenerHelper::attachTestArtifacts);
-//                beforeMethods.clear();
-//            } else if (iTestResult.getMethod().isAfterMethodConfiguration()) {
-//                // get test result and store it for later processing
-//                afterMethods.add(iTestResult);
-//            }
-//        }
-//
-//        /*
-//         * unable to attach afterMethod logs to the relevant test method
-//         * TODO: find a fix
-//         */
-//        if (!afterMethods.isEmpty()) {
-//            //point Allure UUID to the last executed test method
-////            TestNGListenerHelper.readAllureUUID();
-//
-//            //attach after configuration logs to the previous test
-//            afterMethods.forEach(TestNGListenerHelper::attachTestArtifacts);
-//            afterMethods.clear();
-//        }
-//    }
-
     public static String getTestName() {
         return testName.get();
     }
@@ -133,84 +106,57 @@ public class TestNGListenerHelper {
     }
 
     public static void configureCrossBrowserExecution(List<XmlSuite> suites) {
-        if (!"off".equals(SHAFT.Properties.platform.crossBrowserMode())) {
+        String crossBrowserMode = SHAFT.Properties.platform.crossBrowserMode();
+        List<Browser> supportedBrowsers = Arrays.asList(Browser.CHROME, Browser.SAFARI, Browser.FIREFOX, Browser.EDGE);
+        if (!"off".equals(crossBrowserMode)) {
             suites.forEach(suite -> {
-                var firefox_test = (XmlTest) suite.getTests().get(0).clone();
-                firefox_test.setParameters(Map.of(
-                        "executionAddress", "dockerized",
-                        "targetOperatingSystem", Platform.LINUX.name(),
-                        "targetBrowserName", Browser.FIREFOX.browserName()
-                ));
-                firefox_test.setThreadCount(SHAFT.Properties.testNG.threadCount());
-                firefox_test.setParallel(XmlSuite.ParallelMode.valueOf(SHAFT.Properties.testNG.parallel()));
-                firefox_test.setName(firefox_test.getName() + " - FireFox");
+                supportedBrowsers.forEach(supportedBrowser -> createTestSuite((XmlTest) suite.getTests().getFirst().clone(), supportedBrowser));
+                // removing first test which is now a duplicate
+                suite.getTests().removeFirst();
 
-                var safari_test = (XmlTest) suite.getTests().get(0).clone();
-                safari_test.setParameters(Map.of(
-                        "executionAddress", "dockerized",
-                        "targetOperatingSystem", Platform.LINUX.name(),
-                        "targetBrowserName", Browser.SAFARI.browserName()
-                ));
-                safari_test.setThreadCount(SHAFT.Properties.testNG.threadCount());
-                safari_test.setParallel(XmlSuite.ParallelMode.valueOf(SHAFT.Properties.testNG.parallel()));
-                safari_test.setName(safari_test.getName() + " - Safari");
-
-                var chrome_test = (XmlTest) suite.getTests().get(0);
-                chrome_test.setParameters(Map.of(
-                        "executionAddress", "dockerized",
-                        "targetOperatingSystem", Platform.LINUX.name(),
-                        "targetBrowserName", Browser.CHROME.browserName()
-                ));
-                chrome_test.setThreadCount(SHAFT.Properties.testNG.threadCount());
-                chrome_test.setParallel(XmlSuite.ParallelMode.valueOf(SHAFT.Properties.testNG.parallel()));
-                chrome_test.setName(chrome_test.getName() + " - Chrome");
-
-                if (SHAFT.Properties.platform.crossBrowserMode().equals("parallelized")) {
+                if (crossBrowserMode.equals("parallelized")) {
                     suite.setParallel(XmlSuite.ParallelMode.TESTS);
-                    suite.setThreadCount(3);
+                    suite.setThreadCount(supportedBrowsers.size());
                     SHAFT.Properties.visuals.set().videoParamsRecordVideo(true);
-                    SHAFT.Properties.visuals.set().screenshotParamsScreenshotType(Screenshots.VIEWPORT.getValue());
+                    SHAFT.Properties.visuals.set().screenshotParamsScreenshotType(String.valueOf(Screenshots.VIEWPORT));
                 }
             });
-//        } else {
-            // IMPORTANT: the below code block introduced the following issue:
-
-            //if not cross browser mode, still add some properties as parameters to the test suites for better reporting
-//            var parameters = new java.util.HashMap<>(Map.of(
-//                    "executionAddress", Properties.platform.executionAddress(),
-//                    "targetOperatingSystem", Properties.platform.targetOperatingSystem()
-//            ));
-//
-//            if (DriverFactoryHelper.isWebExecution()) {
-//                parameters.put("targetBrowserName", Properties.web.targetBrowserName());
-//            } else {
-//                parameters.put("automationName", Properties.mobile.automationName());
-//            }
-//            suites.forEach(suite -> {
-//                var params = suite.getParameters();
-//                params.putAll(parameters);
-//                suite.setParameters(params);
-//            });
         }
+    }
+
+    private static void createTestSuite(XmlTest xmlTest, Browser browser) {
+        xmlTest.setParameters(Map.of(
+                "executionAddress", "dockerized",
+                "targetOperatingSystem", Platform.LINUX.name(),
+                "targetBrowserName", browser.browserName()
+        ));
+        double threadCount = SHAFT.Properties.testNG.threadCount();
+        if ("DYNAMIC".equals(SHAFT.Properties.testNG.parallelMode())) {
+            threadCount = threadCount * Runtime.getRuntime().availableProcessors();
+            xmlTest.setThreadCount((int) Math.floor(threadCount));
+        } else {
+            xmlTest.setThreadCount((int) Math.floor(threadCount));
+        }
+        xmlTest.setParallel(XmlSuite.ParallelMode.valueOf(SHAFT.Properties.testNG.parallel()));
+        xmlTest.setName(xmlTest.getName() + " - " + browser);
     }
 
     public static void configureTestNGProperties(List<XmlSuite> suites) {
         suites.forEach(suite -> {
-            suite.setPreserveOrder(SHAFT.Properties.testNG.preserveOrder());
-            suite.setGroupByInstances(SHAFT.Properties.testNG.groupByInstances());
-            suite.setVerbose(SHAFT.Properties.testNG.verbose());
-            suite.setParallel(XmlSuite.ParallelMode.valueOf(SHAFT.Properties.testNG.parallel()));
-            suite.setThreadCount(SHAFT.Properties.testNG.threadCount());
             suite.setDataProviderThreadCount(SHAFT.Properties.testNG.dataProviderThreadCount());
-
-            if (SHAFT.Properties.reporting.debugMode()) {
-                ReportManager.log("getPreserveOrder: " + suite.getPreserveOrder());
-                ReportManager.log("getDataProviderThreadCount: " + suite.getDataProviderThreadCount());
-                ReportManager.log("getThreadCount: " + suite.getThreadCount());
-                ReportManager.log("getVerbose: " + suite.getVerbose());
-                ReportManager.log("getGroupByInstances: " + suite.getGroupByInstances());
-                ReportManager.log("getParallel: " + suite.getParallel());
-            }
+            suite.getTests().forEach(xmlTest -> {
+                xmlTest.setPreserveOrder(SHAFT.Properties.testNG.preserveOrder());
+                xmlTest.setGroupByInstances(SHAFT.Properties.testNG.groupByInstances());
+                xmlTest.setVerbose(SHAFT.Properties.testNG.verbose());
+                double threadCount = SHAFT.Properties.testNG.threadCount();
+                if ("DYNAMIC".equals(SHAFT.Properties.testNG.parallelMode())) {
+                    threadCount = threadCount * Runtime.getRuntime().availableProcessors();
+                    xmlTest.setThreadCount((int) Math.floor(threadCount));
+                } else {
+                    xmlTest.setThreadCount((int) Math.floor(threadCount));
+                }
+                xmlTest.setParallel(XmlSuite.ParallelMode.valueOf(SHAFT.Properties.testNG.parallel()));
+            });
         });
     }
 
@@ -230,7 +176,6 @@ public class TestNGListenerHelper {
             System.setProperty("https.proxyPort", proxyHostPort[1]);
             System.setProperty("ftp.proxyHost", proxyHostPort[0]);
             System.setProperty("ftp.proxyPort", proxyHostPort[1]);
-
         }
     }
 
@@ -246,7 +191,7 @@ public class TestNGListenerHelper {
                 if (!attachment.isEmpty())
                     attachments.add(attachment);
             }
-            attachment = ScreenshotManager.attachAnimatedGif();
+            attachment = AnimatedGifManager.attachAnimatedGif();
             if (!attachment.isEmpty())
                 attachments.add(attachment);
 
@@ -347,41 +292,39 @@ public class TestNGListenerHelper {
                     methodDescription = iTestNGMethod.getDescription();
                 }
                 ReportManagerHelper.logTestInformation(className, methodName, methodDescription);
-                ReportManagerHelper.extentReportsCreateTest(className + "." + methodName, methodDescription);
             } else if (iTestNGMethod instanceof ConfigurationMethod configurationMethod) {
                 className = configurationMethod.getTestClass().getName();
                 methodName = configurationMethod.getMethodName();
                 var configurationMethodType = configurationMethod.getMethodName();
 
                 ReportManagerHelper.logConfigurationMethodInformation(className, methodName, configurationMethodType);
-                ReportManagerHelper.extentReportsReset();
             }
         }
     }
 
-        public static void logFinishedTestInformation(ITestResult iTestResult) {
-            ITestNGMethod iTestNGMethod = iTestResult.getMethod();
-            String className;
-            String methodName;
-            String methodDescription = "";
-            String methodStatus = "";
+    public static void logFinishedTestInformation(ITestResult iTestResult) {
+        ITestNGMethod iTestNGMethod = iTestResult.getMethod();
+        String className;
+        String methodName;
+        String methodDescription = "";
+        String methodStatus = "";
 
-            if (!iTestNGMethod.getQualifiedName().contains("AbstractTestNGCucumberTests")) {
-                if (iTestNGMethod.isTest()) {
-                    className = ReportManagerHelper.getTestClassName();
-                    methodName = ReportManagerHelper.getTestMethodName();
-                    if (iTestNGMethod.getDescription() != null) {
-                        methodDescription = iTestNGMethod.getDescription();
-                    }
-                    if (iTestResult.getStatus() == ITestResult.SUCCESS) {
-                        methodStatus = "Passed";
-                    } else if (iTestResult.getStatus() == ITestResult.FAILURE) {
-                        methodStatus = "Failed";
-                    } else if (iTestResult.getStatus() == ITestResult.SKIP) {
-                        methodStatus = "Skipped";
-                    }
-                    ReportManagerHelper.logFinishedTestInformation(className, methodName, methodDescription, methodStatus);
+        if (!iTestNGMethod.getQualifiedName().contains("AbstractTestNGCucumberTests")) {
+            if (iTestNGMethod.isTest()) {
+                className = ReportManagerHelper.getTestClassName();
+                methodName = ReportManagerHelper.getTestMethodName();
+                if (iTestNGMethod.getDescription() != null) {
+                    methodDescription = iTestNGMethod.getDescription();
                 }
+                if (iTestResult.getStatus() == ITestResult.SUCCESS) {
+                    methodStatus = "Passed";
+                } else if (iTestResult.getStatus() == ITestResult.FAILURE) {
+                    methodStatus = "Failed";
+                } else if (iTestResult.getStatus() == ITestResult.SKIP) {
+                    methodStatus = "Skipped";
+                }
+                ReportManagerHelper.logFinishedTestInformation(className, methodName, methodDescription, methodStatus);
             }
         }
     }
+}
