@@ -1,19 +1,9 @@
 package com.shaft.tools.io.internal;
 
-import com.aventstack.extentreports.ExtentReports;
-import com.aventstack.extentreports.ExtentTest;
-import com.aventstack.extentreports.MediaEntityBuilder;
-import com.aventstack.extentreports.markuputils.CodeLanguage;
-import com.aventstack.extentreports.markuputils.MarkupHelper;
-import com.aventstack.extentreports.reporter.ExtentSparkReporter;
-import com.aventstack.extentreports.reporter.configuration.Theme;
-import com.aventstack.extentreports.reporter.configuration.ViewName;
-import com.shaft.api.RestActions;
 import com.shaft.cli.FileActions;
 import com.shaft.cli.TerminalActions;
 import com.shaft.driver.SHAFT;
 import com.shaft.listeners.CucumberFeatureListener;
-import com.shaft.properties.internal.Properties;
 import com.shaft.properties.internal.PropertyFileManager;
 import com.shaft.tools.internal.support.JavaHelper;
 import com.shaft.tools.io.ReportManager;
@@ -22,7 +12,6 @@ import io.qameta.allure.Step;
 import io.qameta.allure.model.Status;
 import io.qameta.allure.model.StatusDetails;
 import lombok.Getter;
-import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.SystemUtils;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
@@ -32,24 +21,18 @@ import org.testng.ITestResult;
 import org.testng.Reporter;
 
 import java.io.*;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
-@Getter
+//@Getter
 @SuppressWarnings("unused")
 public class ReportManagerHelper {
     private static final String TIMESTAMP_FORMAT = "dd-MM-yyyy HH:mm:ss.SSSS aaa";
-    private static final ExtentReports extentReport = new ExtentReports();
-    private static final String SHAFT_ENGINE_VERSION_PROPERTY_NAME = "shaftEngineVersion";
-    private static final String ALLURE_VERSION_PROPERTY_NAME = "allureVersion";
     private static final String REPORT_MANAGER_PREFIX = "[ReportManager] ";
     private static final String SHAFT_ENGINE_LOGS_ATTACHMENT_TYPE = "SHAFT Engine Logs";
-    private static final String allureExtractionLocation = System.getProperty("user.home") + File.separator + ".m2"
-            + File.separator + "repository" + File.separator + "allure" + File.separator;
     private static String issuesLog = "";
     private static int issueCounter = 1;
     private static boolean discreteLogging = false;
@@ -62,18 +45,12 @@ public class ReportManagerHelper {
     private static int openIssuesForPassedTestsCounter = 0;
     @Getter
     private static int failedTestsWithoutOpenIssuesCounter = 0;
-    private static String allureResultsFolderPath = "";
-    private static String allureBinaryPath = "";
-    // TODO: refactor to regular class that can be instantiated within the test and
+    // TODO: refactor to regular class that can be instantiated within the test
     private static List<List<String>> listOfOpenIssuesForFailedTests = new ArrayList<>();
     private static List<List<String>> listOfOpenIssuesForPassedTests = new ArrayList<>();
     private static List<List<String>> listOfNewIssuesForFailedTests = new ArrayList<>();
     private static String featureName = "";
-    private static final ThreadLocal<ExtentTest> extentTest = new ThreadLocal<>();
     private static Logger logger;
-    @Getter
-    private static String extentReportFileName = "";
-    private static boolean generateExtentReports = true;
 
     private ReportManagerHelper() {
         throw new IllegalStateException("Utility class");
@@ -122,12 +99,12 @@ public class ReportManagerHelper {
 
     public static String prepareIssuesLog() {
         if (!listOfNewIssuesForFailedTests.isEmpty()) {
-            listOfNewIssuesForFailedTests.forEach(issue -> logIssue("Test Method '" + issue.get(0) + "." + issue.get(1)
+            listOfNewIssuesForFailedTests.forEach(issue -> logIssue("Test Method '" + issue.getFirst() + "." + issue.get(1)
                     + "' failed. Please investigate and open a new Issue if needed.\n"));
         }
         if (!listOfOpenIssuesForPassedTests.isEmpty()) {
             listOfOpenIssuesForPassedTests.forEach(issue -> {
-                if (issue.get(3)!=null && !issue.get(3).trim().isEmpty()) {
+                if (issue.get(3) != null && !issue.get(3).trim().isEmpty()) {
                     logIssue("Test Method '" + issue.get(0) + "." + issue.get(1)
                             + "' passed. Please validate and close this open issue '" + issue.get(2) + "': '"
                             + issue.get(3) + "'.\n");
@@ -140,7 +117,7 @@ public class ReportManagerHelper {
         }
         if (!listOfOpenIssuesForFailedTests.isEmpty()) {
             listOfOpenIssuesForFailedTests.forEach(issue -> {
-                if (!issue.get(3).trim().isEmpty()) {
+                if (issue.get(3) != null && !issue.get(3).trim().isEmpty()) {
                     logIssue("Test Method '" + issue.get(0) + "." + issue.get(1) + "' failed with open issue '"
                             + issue.get(2) + "': '" + issue.get(3) + "'.\n");
                 } else {
@@ -185,37 +162,10 @@ public class ReportManagerHelper {
         ReportManagerHelper.debugMode = debugMode;
     }
 
-    public static void initializeAllureReportingEnvironment() {
-        ReportManager.logDiscrete("Initializing Allure Reporting Environment...");
-        ReportHelper.disableLogging();
-        allureResultsFolderPath = SHAFT.Properties.paths.allureResults();
-        cleanAllureResultsDirectory();
-        downloadAndExtractAllureBinaries();
-        overrideAllurePluginConfiguration();
-        writeGenerateReportShellFilesToProjectDirectory();
-        writeEnvironmentVariablesToAllureResultsDirectory();
-        createAllureListenersMetaFiles();
-        ReportHelper.enableLogging();
-    }
-
-    private static void overrideAllurePluginConfiguration() {
-        String allureVersion = SHAFT.Properties.internal.allureVersion();
-        // extract allure from SHAFT_Engine jar
-        URL allureSHAFTConfigArchive = ReportManagerHelper.class.getResource("/resources/allure/allureBinary_SHAFTEngineConfigFiles.zip");
-        FileActions.getInstance().unpackArchive(allureSHAFTConfigArchive,
-                allureExtractionLocation + "allure-" + allureVersion + File.separator);
-        // deleting custom-logo.svg to avoid generating extra folder with report in single mode
-        FileActions.getInstance().deleteFile(allureExtractionLocation + "allure-" + allureVersion + File.separator + "plugins"+File.separator+"custom-logo-plugin"+File.separator+"static"+File.separator+"custom-logo.svg" );
-
-    }
-
-    private static void createAllureListenersMetaFiles() {
-        FileActions.getInstance().createFolder(com.shaft.properties.internal.Properties.paths.services());
-        Arrays.asList("io.qameta.allure.listener.ContainerLifecycleListener","io.qameta.allure.listener.FixtureLifecycleListener",
-                "io.qameta.allure.listener.StepLifecycleListener", "io.qameta.allure.listener.TestLifecycleListener").forEach(fileName -> FileActions.getInstance().writeToFile(Properties.paths.services(), fileName, "com.shaft.listeners.AllureListener"));
-    }
-
     private static void initializeLogger() {
+        // delete previous run execution log
+        FileActions.getInstance(true).deleteFile(System.getProperty("appender.file.fileName"));
+        // initialize
         Configurator.initialize(null, PropertyFileManager.getCUSTOM_PROPERTIES_FOLDER_PATH() + "/log4j2.properties");
         logger = LogManager.getLogger(ReportManager.class.getName());
     }
@@ -329,10 +279,6 @@ public class ReportManagerHelper {
         }
     }
 
-    public static void attach(List<Object> screenshot) {
-        attach((String) screenshot.get(0), (String) screenshot.get(1), (InputStream) screenshot.get(2));
-    }
-
     /**
      * Returns the log of the current test, and attaches it in the end of the test
      * execution report.
@@ -356,8 +302,8 @@ public class ReportManagerHelper {
             createLogEntry(engineLogCreated, true);
             byte[] engineLog = new byte[0];
             try {
-                engineLog = FileActions.getInstance().readFileAsByteArray(System.getProperty("appender.file.fileName"));
-                FileActions.getInstance().deleteFile(System.getProperty("appender.file.fileName"));
+                engineLog = FileActions.getInstance(true).readFileAsByteArray(System.getProperty("appender.file.fileName"));
+                FileActions.getInstance(true).deleteFile(System.getProperty("appender.file.fileName"));
             } catch (Exception throwable) {
                 logDiscrete(throwable);
             }
@@ -377,28 +323,6 @@ public class ReportManagerHelper {
         }
     }
 
-    public static void openAllureReportAfterExecution() {
-        String commandToOpenAllureReport;
-        if (Boolean.TRUE.equals(SHAFT.Properties.reporting.openAllureReportAfterExecution())) {
-            if (SystemUtils.IS_OS_WINDOWS) {
-                commandToOpenAllureReport = ("generate_allure_report.bat");
-            } else {
-                commandToOpenAllureReport = ("sh generate_allure_report.sh");
-            }
-            TerminalActions.getInstance(true, true).performTerminalCommand(commandToOpenAllureReport);
-        }
-    }
-
-    public static void generateAllureReportArchive() {
-        if (Boolean.TRUE.equals(SHAFT.Properties.reporting.generateAllureReportArchive())) {
-            ReportManager.logDiscrete("Generating Allure Report Archive...");
-            ReportHelper.disableLogging();
-            writeAllureReport();
-            createAllureReportArchive();
-            ReportHelper.enableLogging();
-        }
-    }
-
     public static String getCallingMethodFullName() {
         StackTraceElement[] callingStack = Thread.currentThread().getStackTrace();
         var callingMethodFullName = new StringBuilder();
@@ -415,8 +339,22 @@ public class ReportManagerHelper {
         return callingMethodFullName.toString();
     }
 
+    public static String getCallingClassFullName() {
+        StackTraceElement[] callingStack = Thread.currentThread().getStackTrace();
+        var getCallingClassFullName = new StringBuilder();
+        for (var i = 1; i < callingStack.length; i++) {
+            if (!callingStack[i].getClassName().contains("shaft")) {
+                getCallingClassFullName.append(callingStack[i].getClassName());
+                break;
+            }
+        }
+        return getCallingClassFullName.toString();
+    }
+
     public static String getTestClassName() {
-        return Reporter.getCurrentTestResult().getMethod().getTestClass().getName();
+        var result = Reporter.getCurrentTestResult();
+        return result != null ? result.getMethod().getTestClass().getName() : "";
+//        return Reporter.getCurrentTestResult().getMethod().getTestClass().getName();
     }
 
     public static String getTestMethodName() {
@@ -454,87 +392,6 @@ public class ReportManagerHelper {
 
     public static void setFeatureName(String featureName) {
         ReportManagerHelper.featureName = featureName;
-    }
-
-    public static void initializeExtentReportingEnvironment() {
-        generateExtentReports = SHAFT.Properties.reporting.generateExtentReports();
-        if (generateExtentReports) {
-            ReportManager.logDiscrete("Initializing Extent Reporting Environment...");
-            ReportHelper.disableLogging();
-            cleanExtentReportsDirectory();
-            extentReportFileName = SHAFT.Properties.paths.extentReports() + "ExtentReports_" + (new SimpleDateFormat("dd-MM-yyyy_HH-mm-ss-SSSS-aaa")).format(System.currentTimeMillis()) + ".html";
-
-            var spark = new ExtentSparkReporter(extentReportFileName)
-                    .viewConfigurer()
-                    .viewOrder()
-                    .as(new ViewName[]{ViewName.DASHBOARD, ViewName.TEST, ViewName.EXCEPTION, ViewName.LOG})
-                    .apply();
-
-            spark.config().setTheme(Theme.STANDARD);
-            spark.config().setDocumentTitle("Extent Reports");
-            spark.config().setReportName("Extent Reports - Powered by SHAFT_Engine");
-            extentReport.attachReporter(spark);
-            ReportHelper.enableLogging();
-        }
-    }
-
-    private static void cleanExtentReportsDirectory() {
-        if (SHAFT.Properties.reporting.cleanExtentReportsDirectoryBeforeExecution()) {
-            var extentReportsFolderPath = SHAFT.Properties.paths.extentReports();
-            FileActions.getInstance().deleteFolder(extentReportsFolderPath.substring(0, extentReportsFolderPath.length() - 1));
-        }
-
-    }
-
-    public static void extentReportsReset() {
-        extentTest.remove();
-    }
-
-
-    public static void extentReportsCreateTest(String testName, String testDescription) {
-        if (extentReport.equals(new ExtentReports())) {
-            if (testDescription.isEmpty()) {
-                extentTest.set(extentReport.createTest(testName));
-            } else {
-                extentTest.set(extentReport.createTest(testDescription));
-            }
-        }
-    }
-
-    public static void extentReportsPass(String message) {
-        if (generateExtentReports && extentTest.get()!=null) {
-            extentTest.get().pass(message);
-        }
-    }
-
-    public static void extentReportsFail(String message) {
-        if (generateExtentReports && extentTest.get()!=null) {
-            extentTest.get().fail(message);
-        }
-    }
-
-    public static void extentReportsFail(Throwable t) {
-        if (generateExtentReports && extentTest.get()!=null) {
-            extentTest.get().fail(t);
-        }
-    }
-
-    public static void extentReportsSkip(String message) {
-        if (generateExtentReports && extentTest.get()!=null) {
-            extentTest.get().skip(message);
-        }
-    }
-
-    public static void extentReportsSkip(Throwable t) {
-        if (generateExtentReports && extentTest.get()!=null) {
-            extentTest.get().skip(t);
-        }
-    }
-
-    public static void extentReportsFlush() {
-        if (generateExtentReports) {
-            extentReport.flush();
-        }
     }
 
     private static String formatStackTraceToLogEntry(Throwable t, boolean isCause) {
@@ -576,10 +433,6 @@ public class ReportManagerHelper {
             }
             String log = REPORT_MANAGER_PREFIX + logText.trim() + " @" + timestamp;
             Reporter.log(log, false);
-            if (extentTest.get() != null && !logText.contains("created attachment") && !logText.contains("<html")) {
-                extentTest.get().info(logText);
-            }
-
             if (addToConsoleLog) {
                 if (logger == null) {
                     initializeLogger();
@@ -640,15 +493,14 @@ public class ReportManagerHelper {
      *
      * @param logText the text that needs to be logged in this action
      */
-//    @Step("{logText}")
     public static void writeStepToReport(String logText) {
         if (!SHAFT.Properties.reporting.disableLogging()) {
             createLogEntry(logText, true);
-            Allure.step(logText, getAllureStepStatus(logText));
+            Allure.step(logText, getStepStatus(logText));
         }
     }
 
-    private static Status getAllureStepStatus(String logText) {
+    private static Status getStepStatus(String logText) {
         if (logText != null && logText.toLowerCase().contains("failed")) {
             return Status.FAILED;
         }
@@ -667,7 +519,7 @@ public class ReportManagerHelper {
 
     @Step("{logText}")
     static void writeStepToReport(String logText, List<List<Object>> attachments, CheckpointStatus status) {
-        createLogEntry(logText, false);
+        createLogEntry(logText, true);
         if (attachments != null && !attachments.isEmpty()) {
             attachments.forEach(attachment -> {
                 if (attachment != null && !attachment.isEmpty() && attachment.get(2).getClass().toString().toLowerCase().contains("string")
@@ -711,45 +563,8 @@ public class ReportManagerHelper {
                 Reporter.log(error, false);
             }
             String attachmentDescription = attachmentType + " - " + attachmentName;
-            attachBasedOnFileType(attachmentType, attachmentName, byteArrayOutputStream, attachmentDescription);
+            AttachmentReporter.attachBasedOnFileType(attachmentType, attachmentName, byteArrayOutputStream, attachmentDescription);
             logAttachmentAction(attachmentType, attachmentName, byteArrayOutputStream);
-        }
-    }
-    @SuppressWarnings("SpellCheckingInspection")
-    private static void attachBasedOnFileType(String attachmentType, String attachmentName,
-                                              ByteArrayOutputStream attachmentContent, String attachmentDescription) {
-        var content = new ByteArrayInputStream(attachmentContent.toByteArray());
-        if (attachmentType.toLowerCase().contains("screenshot")) {
-            Allure.addAttachment(attachmentDescription, "image/png", content, ".png");
-            attachImageToExtentReport("image/png", new ByteArrayInputStream(attachmentContent.toByteArray()));
-        } else if (attachmentType.toLowerCase().contains("recording")) {
-            Allure.addAttachment(attachmentDescription, "video/mp4", content, ".mp4");
-        } else if (attachmentType.toLowerCase().contains("gif")) {
-            Allure.addAttachment(attachmentDescription, "image/gif", content, ".gif");
-            attachImageToExtentReport("image/gif", new ByteArrayInputStream(attachmentContent.toByteArray()));
-        } else if (attachmentType.toLowerCase().contains("csv") || attachmentName.toLowerCase().contains("csv")) {
-            Allure.addAttachment(attachmentDescription, "text/csv", content, ".csv");
-            attachCodeBlockToExtentReport("text/csv", new ByteArrayInputStream(attachmentContent.toByteArray()));
-        } else if (attachmentType.toLowerCase().contains("xml") || attachmentName.toLowerCase().contains("xml")) {
-            Allure.addAttachment(attachmentDescription, "text/xml", content, ".xml");
-            attachCodeBlockToExtentReport("text/xml", new ByteArrayInputStream(attachmentContent.toByteArray()));
-        } else if (attachmentType.toLowerCase().contains("excel") || attachmentName.toLowerCase().contains("excel")) {
-            Allure.addAttachment(attachmentDescription, "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet", content, ".xlsx");
-        } else if (attachmentType.toLowerCase().contains("json") || attachmentName.toLowerCase().contains("json")) {
-            Allure.addAttachment(attachmentDescription, "text/json", content, ".json");
-            attachCodeBlockToExtentReport("text/json", new ByteArrayInputStream(attachmentContent.toByteArray()));
-        } else if (attachmentType.toLowerCase().contains("properties")) {
-            Allure.addAttachment(attachmentDescription, "text/plain", content, ".properties");
-        } else if (attachmentType.toLowerCase().contains("link")) {
-            Allure.addAttachment(attachmentDescription, "text/uri-list", content, ".uri");
-        } else if (attachmentType.toLowerCase().contains("engine logs")) {
-                Allure.addAttachment(attachmentDescription, "text/plain", content, ".txt");
-        } else if (attachmentType.toLowerCase().contains("page snapshot")) {
-            Allure.addAttachment(attachmentDescription, "multipart/related", content, ".mhtml");
-        } else if (attachmentType.toLowerCase().contains("html")) {
-            Allure.addAttachment(attachmentDescription, "text/html", content, ".html");
-        } else {
-            Allure.addAttachment(attachmentDescription, content);
         }
     }
 
@@ -777,139 +592,6 @@ public class ReportManagerHelper {
         }
     }
 
-    private static void attachCodeBlockToExtentReport(String attachmentType, InputStream attachmentContent) {
-        if (extentTest.get() !=null) {
-            try {
-                var codeBlock = IOUtils.toString(attachmentContent, StandardCharsets.UTF_8);
-                switch (attachmentType) {
-                    case "text/json" -> extentTest.get().info(MarkupHelper.createCodeBlock(codeBlock, CodeLanguage.JSON));
-                    case "text/xml" -> extentTest.get().info(MarkupHelper.createCodeBlock(codeBlock, CodeLanguage.XML));
-                    default -> extentTest.get().info(MarkupHelper.createCodeBlock(codeBlock));
-                }
-            } catch (IOException e) {
-                ReportManager.logDiscrete("Failed to attach code block to extentReport.");
-            }
-        }
-    }
-
-    private static void attachImageToExtentReport(String attachmentType, InputStream attachmentContent) {
-        if (extentTest.get() !=null) {
-            try {
-                var image = Base64.getEncoder().encodeToString(IOUtils.toByteArray(attachmentContent));
-                if (attachmentType.toLowerCase().contains("gif")) {
-                    extentTest.get().addScreenCaptureFromBase64String(image);
-                } else {
-                    extentTest.get().info(MediaEntityBuilder.createScreenCaptureFromBase64String(image).build());
-                }
-            } catch (IOException e) {
-                ReportManager.logDiscrete("Failed to attach screenshot to extentReport.");
-            }
-        }
-    }
-
-    private static void cleanAllureResultsDirectory() {
-        // clean allure-results directory before execution
-        if (SHAFT.Properties.reporting.cleanAllureResultsDirectoryBeforeExecution()) {
-            try {
-                FileActions.getInstance().deleteFile("allure-report/");
-                FileActions.getInstance().deleteFolder(allureResultsFolderPath.substring(0, allureResultsFolderPath.length() - 1));
-            } catch (Exception t) {
-                ReportManager.log("Failed to delete allure-results as it is currently open. Kindly restart your device to unlock the directory.");
-            }
-        }
-    }
-
-    private static void writeEnvironmentVariablesToAllureResultsDirectory() {
-        // reads all environment variables and then formats and writes them to be read
-        // by the Allure report
-        var props = System.getProperties();
-        var propertiesFileBuilder = new StringBuilder();
-        propertiesFileBuilder.append("<environment>");
-        // read properties from any explicit properties files
-        for (var i = 0; i < props.size(); i++) {
-            String propertyKey = ((String) (props.keySet().toArray())[i]).trim();
-            String propertyValue = props.getProperty(propertyKey).trim();
-
-            // excluding empty values, system properties (all system properties have "." in
-            // their names), and any git branch issues
-            if (!propertyValue.isEmpty() && !propertyValue.contains("==") && !propertyKey.contains(">>>")
-                    && !propertyKey.contains("<<<")) {
-
-                if (propertyValue.contains("&")) {
-                    propertyValue = propertyValue.replace("&", "&amp;");
-                }
-                String parameter = "<parameter>" + "<key>" + propertyKey + "</key>" + "<value>" + propertyValue
-                        + "</value>" + "</parameter>";
-                if (propertyKey.equals(SHAFT_ENGINE_VERSION_PROPERTY_NAME)) {
-                    // there's an open issue, when fixed this will be displayed properly
-                    // https://github.com/allure-framework/allure2/issues/382
-                    propertiesFileBuilder.insert(13, parameter);
-                } else {
-                    propertiesFileBuilder.append(parameter);
-                }
-            }
-        }
-        propertiesFileBuilder.append("</environment>");
-        FileActions.getInstance().writeToFile(SHAFT.Properties.paths.allureResults(), "environment.xml",
-                RestActions.formatXML(propertiesFileBuilder.toString()));
-    }
-
-    private static void downloadAndExtractAllureBinaries() {
-        // extract allure from jar file to src/main/resources directory if it doesn't
-        // already exist
-        String allureVersion = SHAFT.Properties.internal.allureVersion();
-        allureBinaryPath = allureExtractionLocation + "allure-" + allureVersion + File.separator + "bin" + File.separator + "allure";
-        if (!FileActions.getInstance().doesFileExist(allureBinaryPath)) {
-            try {
-                FileActions.getInstance().deleteFolder(allureExtractionLocation);
-            } catch (AssertionError e) {
-                ReportManager.logDiscrete("Couldn't clear the allure extraction directory. Kindly terminate any running java process or restart your machine to fix this issue.");
-                ReportManagerHelper.logDiscrete(e);
-            }
-            // download allure binary
-            URL allureArchive = FileActions.getInstance().downloadFile(
-                    "https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/" + allureVersion
-                            + "/allure-commandline-" + allureVersion + ".zip",
-                    "target" + File.separator + "allureBinary.zip");
-            FileActions.getInstance().unpackArchive(allureArchive, allureExtractionLocation);
-
-            if (!SystemUtils.IS_OS_WINDOWS) {
-                // make allure executable on Unix-based shells
-                TerminalActions.getInstance(false, false).performTerminalCommand("chmod u+x " + allureBinaryPath);
-            }
-        }
-    }
-
-    private static void writeGenerateReportShellFilesToProjectDirectory() {
-        String allureVersion = SHAFT.Properties.internal.allureVersion();
-        // create generate_allure_report.sh or generate_allure_report.bat
-        List<String> commandsToServeAllureReport;
-        if (SystemUtils.IS_OS_WINDOWS) {
-            // create windows batch file
-            commandsToServeAllureReport = Arrays.asList("@echo off",
-                    ":: If you already have a valid JAVA_HOME environment variable set, feel free to comment the below two lines",
-                    "set JAVA_HOME=" + System.getProperty("java.home"),
-                    "set path=%JAVA_HOME%\\bin;%path%",
-                    "set path=" + allureExtractionLocation + "allure-" + allureVersion + "\\bin;%path%",
-                    "allure serve " + allureResultsFolderPath.substring(0, allureResultsFolderPath.length() - 1) + " -h localhost",
-                    "pause", "exit");
-            FileActions.getInstance().writeToFile("", "generate_allure_report.bat", commandsToServeAllureReport);
-        } else {
-            // create Unix-based sh file
-            commandsToServeAllureReport = Arrays
-                    .asList("#!/bin/bash", "parent_path=$( cd \"$(dirname \"${BASH_SOURCE[0]}\")\" ; pwd -P )",
-                            "cd '" + allureExtractionLocation + "allure-" + allureVersion + "/bin/'",
-                            "bash allure serve $parent_path'/"
-                                    + allureResultsFolderPath.substring(0, allureResultsFolderPath.length() - 1) + "'" + " -h localhost",
-                            "exit"
-
-                    );
-            FileActions.getInstance().writeToFile("", "generate_allure_report.sh", commandsToServeAllureReport);
-            // make allure executable on Unix-based shells
-            TerminalActions.getInstance(false, false).performTerminalCommand("chmod u+x generate_allure_report.sh");
-        }
-    }
-
     public static boolean isInternalStep() {
         var callingMethodName = (new Throwable()).getStackTrace()[2].toString();
         return callingMethodName.contains("shaft");
@@ -928,56 +610,20 @@ public class ReportManagerHelper {
         createAttachment(attachmentType, attachmentName, attachmentContent);
     }
 
-    private static void writeAllureReport() {
-        // add correct file extension based on target OS
-        String commandToCreateAllureReport;
-        allureBinaryPath = allureExtractionLocation + "allure-" + SHAFT.Properties.internal.allureVersion()
-                + "/bin/allure";
-
-        if (SystemUtils.IS_OS_WINDOWS) {
-            commandToCreateAllureReport = allureBinaryPath + ".bat" + " generate --single-file --clean '"
-                    + allureResultsFolderPath.substring(0, allureResultsFolderPath.length() - 1)
-                    + "' -o 'allure-report'";
-        } else {
-            commandToCreateAllureReport = allureBinaryPath + " generate --single-file --clean "
-                    + allureResultsFolderPath.substring(0, allureResultsFolderPath.length() - 1)
-                    + " -o allure-report";
-        }
-        TerminalActions.getInstance(false, false).performTerminalCommand(commandToCreateAllureReport);
-    }
-
-    private static void createAllureReportArchive() {
-        if (FileActions.getInstance().doesFileExist(allureExtractionLocation)) {
-            FileActions.getInstance().zipFiles("allure-report/", "generatedReport_" + new SimpleDateFormat("yyyyMMdd-HHmmss").format(new Date()) + ".zip");
-        }
-    }
-
     public static void cleanExecutionSummaryReportDirectory() {
         if (SHAFT.Properties.reporting.cleanSummaryReportsDirectoryBeforeExecution()) {
             ReportManager.logDiscrete("Initializing Summary Reporting Environment...");
-            ReportHelper.disableLogging();
             String executionSummaryReportFolderPath = SHAFT.Properties.paths.executionSummaryReport();
-            FileActions.getInstance().deleteFolder(executionSummaryReportFolderPath.substring(0, executionSummaryReportFolderPath.length() - 1));
-            ReportHelper.enableLogging();
+            FileActions.getInstance(true).deleteFolder(executionSummaryReportFolderPath.substring(0, executionSummaryReportFolderPath.length() - 1));
         }
     }
 
     public static void openExecutionSummaryReportAfterExecution() {
         if (SHAFT.Properties.reporting.openExecutionSummaryReportAfterExecution()) {
             if (SystemUtils.IS_OS_WINDOWS) {
-                SHAFT.CLI.terminal().performTerminalCommand(".\\" + SHAFT.Properties.paths.executionSummaryReport() + "ExecutionSummaryReport_*.html");
+                TerminalActions.getInstance(false, false, true).performTerminalCommand(".\\" + SHAFT.Properties.paths.executionSummaryReport() + "ExecutionSummaryReport_*.html");
             } else {
-                SHAFT.CLI.terminal().performTerminalCommand("open ./" + SHAFT.Properties.paths.executionSummaryReport() + "ExecutionSummaryReport_*.html");
-            }
-        }
-    }
-
-    public static void openExtentReportAfterExecution() {
-        if (SHAFT.Properties.reporting.openExtentReportAfterExecution()) {
-            if (SystemUtils.IS_OS_WINDOWS) {
-                SHAFT.CLI.terminal().performTerminalCommand(".\\" + SHAFT.Properties.paths.extentReports() + "ExtentReports_*.html");
-            } else {
-                SHAFT.CLI.terminal().performTerminalCommand("open ./" + SHAFT.Properties.paths.extentReports() + "ExtentReports_*.html");
+                TerminalActions.getInstance(false, false, true).performTerminalCommand("open ./" + SHAFT.Properties.paths.executionSummaryReport() + "ExecutionSummaryReport_*.html");
             }
         }
     }
@@ -986,12 +632,15 @@ public class ReportManagerHelper {
         if (!SHAFT.Properties.reporting.disableLogging()) {
             if (!logText.toLowerCase().contains("failed") && getDiscreteLogging() && isInternalStep()) {
                 createLogEntry(logText, Level.INFO);
-                if (attachments != null && !attachments.isEmpty() && (attachments.size() > 1 || (attachments.get(0) != null && !attachments.get(0).isEmpty()))) {
+                if (attachments != null && !attachments.isEmpty() && (attachments.size() > 1 || (attachments.getFirst() != null && !attachments.getFirst().isEmpty()))) {
                     attachments.forEach(attachment -> {
                         if (attachment != null && !attachment.isEmpty()) {
-                            if (attachment.get(2) instanceof String) {
+                            if (attachment.get(2) instanceof String string) {
                                 attachAsStep(attachment.get(0).toString(), attachment.get(1).toString(),
-                                        new ByteArrayInputStream(attachment.get(2).toString().getBytes()));
+                                        new ByteArrayInputStream(string.getBytes()));
+                            } else if (attachment.get(2) instanceof StringBuilder stringBuilder) {
+                                attachAsStep(attachment.get(0).toString(), attachment.get(1).toString(),
+                                        new ByteArrayInputStream(stringBuilder.toString().getBytes()));
                             } else {
                                 attachAsStep(attachment.get(0).toString(), attachment.get(1).toString(),
                                         (InputStream) attachment.get(2));
@@ -1000,7 +649,7 @@ public class ReportManagerHelper {
                     });
                 }
             } else {
-                if (attachments != null && !attachments.isEmpty() && (attachments.size() > 1 || (attachments.get(0) != null && !attachments.get(0).isEmpty()))) {
+                if (attachments != null && !attachments.isEmpty() && (attachments.size() > 1 || (attachments.getFirst() != null && !attachments.getFirst().isEmpty()))) {
                     CheckpointStatus status = (!logText.toLowerCase().contains("fail")) ? CheckpointStatus.PASS : CheckpointStatus.FAIL;
                     writeStepToReport(logText, attachments, status);
                 } else {
@@ -1016,8 +665,8 @@ public class ReportManagerHelper {
 
         if (type.equals(CheckpointType.VERIFICATION) && status.equals(CheckpointStatus.FAIL)
                 || !SHAFT.Properties.reporting.disableLogging()) {
-            if (customLogMessages != null && !customLogMessages.isEmpty() && !customLogMessages.get(0).trim().isEmpty()) {
-                String customLogText = customLogMessages.get(0);
+            if (customLogMessages != null && !customLogMessages.isEmpty() && !customLogMessages.getFirst().trim().isEmpty()) {
+                String customLogText = customLogMessages.getFirst();
                 if (status == CheckpointStatus.PASS) {
                     customLogText = (type == CheckpointType.VERIFICATION) ? "Verification Passed: " + customLogText : "Assertion Passed: " + customLogText;
                 } else {
@@ -1029,10 +678,10 @@ public class ReportManagerHelper {
                 } else {
                     writeNestedStepsToReport(customLogText);
                 }
-                CheckpointCounter.increment(type, customLogMessages.get(0), status);
+                CheckpointCounter.increment(type, customLogMessages.getFirst(), status);
                 ExecutionSummaryReport.validationsIncrement(status);
             } else {
-                if (attachments != null && !attachments.isEmpty() && !attachments.get(0).isEmpty()) {
+                if (attachments != null && !attachments.isEmpty() && !attachments.getFirst().isEmpty()) {
                     writeStepToReport(logText, attachments, status);
                 } else {
                     writeStepToReport(logText);
@@ -1047,9 +696,7 @@ public class ReportManagerHelper {
         writeNestedStepsToReport(logText, attachments);
     }
 
-    @Step("{customLog}")
-    private static void writeNestedStepsToReport(String customLog, List<List<Object>> attachments) {
-        createLogEntry(customLog, false);
+    public static void attach(List<List<Object>> attachments) {
         if (attachments != null && !attachments.isEmpty()) {
             attachments.forEach(attachment -> {
                 if (attachment != null && !attachment.isEmpty() && attachment.get(2).getClass().toString().toLowerCase().contains("string")
@@ -1067,6 +714,12 @@ public class ReportManagerHelper {
                 }
             });
         }
+    }
+
+    @Step("{customLog}")
+    private static void writeNestedStepsToReport(String customLog, List<List<Object>> attachments) {
+        createLogEntry(customLog, false);
+        attach(attachments);
     }
 
     @Step("{customLog}")
